[gd_scene load_steps=15 format=2]

[ext_resource path="res://FOTD Assets/Deanna.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Shop.gd" type="Script" id=2]
[ext_resource path="res://Guns.gd" type="Script" id=3]
[ext_resource path="res://FOTD Assets/PNG/Inventory/Tile Items/shotgun.png" type="Texture" id=4]
[ext_resource path="res://FOTD Assets/PNG/Inventory/Tile Items/AKM.png" type="Texture" id=5]
[ext_resource path="res://FOTD Assets/PNG/Inventory/Tile Items/mp5.png" type="Texture" id=6]
[ext_resource path="res://Other.gd" type="Script" id=7]
[ext_resource path="res://FOTD Assets/PNG/Inventory/Tile Items/Bandage.png" type="Texture" id=8]
[ext_resource path="res://FOTD Assets/PNG/Inventory/Tile Items/speed.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.86408
margin_top = -2.6727
margin_right = -9.86414
margin_bottom = -2.67273
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.5
margin_top = -223.0
margin_right = 380.5
margin_bottom = 223.0
color = Color( 0.647059, 0.317647, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.176
anchor_right = 0.5
anchor_bottom = 0.176
margin_left = -89.1028
margin_top = -34.4167
margin_right = 104.897
margin_bottom = 73.5833
custom_fonts/font = SubResource( 1 )
text = "Shop"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 129.0
margin_top = 179.0
margin_right = -127.0
margin_bottom = -77.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guns" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Guns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.707
margin_top = -134.0
margin_right = 354.293
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Node2D" parent="TabContainer/Guns/RichTextLabel"]

[node name="Panel" type="Panel" parent="TabContainer/Guns/RichTextLabel/Control"]
margin_left = 4.0
margin_top = 8.0
margin_right = 143.0
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shotgun_sprite" type="Sprite" parent="TabContainer/Guns/RichTextLabel/Control/Panel"]
position = Vector2( 66.8216, 60.1041 )
scale = Vector2( 1.54506, 1.4714 )
texture = ExtResource( 4 )

[node name="PriceLabel" type="Label" parent="TabContainer/Guns/RichTextLabel/Control/Panel"]
margin_left = 42.7574
margin_top = 131.828
margin_right = 100.757
margin_bottom = 161.828
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="TabContainer/Guns/RichTextLabel/Control"]
margin_left = 180.777
margin_top = 8.0
margin_right = 319.777
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rifle" type="Sprite" parent="TabContainer/Guns/RichTextLabel/Control/Panel2"]
position = Vector2( 66.8216, 60.1041 )
scale = Vector2( 1.54506, 1.4714 )
texture = ExtResource( 5 )

[node name="PriceLabel" type="Label" parent="TabContainer/Guns/RichTextLabel/Control/Panel2"]
margin_left = 39.784
margin_top = 131.828
margin_right = 97.7836
margin_bottom = 171.828
custom_fonts/font = SubResource( 2 )
text = "55"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="TabContainer/Guns/RichTextLabel/Control"]
margin_left = 353.728
margin_top = 8.0
margin_right = 492.728
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shotgun_sprite" type="Sprite" parent="TabContainer/Guns/RichTextLabel/Control/Panel3"]
position = Vector2( 66.8216, 60.1041 )
scale = Vector2( 1.54506, 1.4714 )
texture = ExtResource( 6 )

[node name="PriceLabel" type="Label" parent="TabContainer/Guns/RichTextLabel/Control/Panel3"]
margin_left = 42.7574
margin_top = 131.828
margin_right = 100.757
margin_bottom = 161.828
custom_fonts/font = SubResource( 2 )
text = "75"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Guns/RichTextLabel/Control"]
margin_left = 34.4233
margin_top = 204.354
margin_right = 120.423
margin_bottom = 235.354
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="TabContainer/Guns/RichTextLabel/Control"]
margin_left = 212.282
margin_top = 204.354
margin_right = 298.282
margin_bottom = 235.354
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="TabContainer/Guns/RichTextLabel/Control"]
margin_left = 381.627
margin_top = 204.354
margin_right = 467.627
margin_bottom = 235.354
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HScrollBar" type="HScrollBar" parent="TabContainer/Guns"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -254.0
margin_top = -12.0
margin_right = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remainder" type="ColorRect" parent="TabContainer/Guns"]
visible = false
margin_left = 78.0
margin_right = 684.0
margin_bottom = 303.0
color = Color( 0, 0, 0, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Guns/Remainder"]
margin_left = 56.0
margin_top = 10.0
margin_right = 557.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 3 )
text = "test"
align = 1
valign = 1

[node name="Button" type="Button" parent="TabContainer/Guns/Remainder"]
margin_left = 186.0
margin_top = 233.0
margin_right = 435.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 4 )
text = "Ok"

[node name="Other" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Other"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.707
margin_top = -134.0
margin_right = 354.293
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Node2D" parent="TabContainer/Other/RichTextLabel"]

[node name="Panel" type="Panel" parent="TabContainer/Other/RichTextLabel/Control"]
margin_left = 4.0
margin_top = 8.0
margin_right = 143.0
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal" type="Sprite" parent="TabContainer/Other/RichTextLabel/Control/Panel"]
position = Vector2( 66.8216, 60.1041 )
scale = Vector2( 1.54506, 1.4714 )
texture = ExtResource( 8 )

[node name="PriceLabel" type="Label" parent="TabContainer/Other/RichTextLabel/Control/Panel"]
margin_left = 42.7574
margin_top = 131.828
margin_right = 100.757
margin_bottom = 161.828
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="TabContainer/Other/RichTextLabel/Control"]
margin_left = 181.534
margin_top = 8.0
margin_right = 320.534
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Sprite" parent="TabContainer/Other/RichTextLabel/Control/Panel2"]
position = Vector2( 66.8216, 60.1041 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )

[node name="PriceLabel" type="Label" parent="TabContainer/Other/RichTextLabel/Control/Panel2"]
margin_left = 42.7574
margin_top = 131.828
margin_right = 100.757
margin_bottom = 161.828
custom_fonts/font = SubResource( 2 )
text = "110"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Other/RichTextLabel/Control"]
margin_left = 33.2341
margin_top = 204.354
margin_right = 119.234
margin_bottom = 235.354
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="TabContainer/Other/RichTextLabel/Control"]
margin_left = 212.103
margin_top = 204.354
margin_right = 298.103
margin_bottom = 235.354
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HScrollBar" type="HScrollBar" parent="TabContainer/Other"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -254.0
margin_top = -12.0
margin_right = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remainder" type="ColorRect" parent="TabContainer/Other"]
visible = false
margin_left = 78.0
margin_right = 684.0
margin_bottom = 303.0
color = Color( 0, 0, 0, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Other/Remainder"]
margin_left = 56.0
margin_top = 10.0
margin_right = 557.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 3 )
text = "test"
align = 1
valign = 1

[node name="Button" type="Button" parent="TabContainer/Other/Remainder"]
margin_left = 186.0
margin_top = 233.0
margin_right = 435.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 4 )
text = "Ok"

[node name="Cash" type="Label" parent="."]
margin_left = 476.891
margin_top = 201.2
margin_right = 545.891
margin_bottom = 230.2
custom_fonts/font = SubResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TabContainer/Guns/RichTextLabel/Control/Button" to="TabContainer/Guns" method="_on_Button_pressed"]
[connection signal="pressed" from="TabContainer/Guns/RichTextLabel/Control/Button2" to="TabContainer/Guns" method="_on_Button2_pressed"]
[connection signal="pressed" from="TabContainer/Guns/RichTextLabel/Control/Button3" to="TabContainer/Guns" method="_on_Button3_pressed"]
[connection signal="pressed" from="TabContainer/Guns/Remainder/Button" to="TabContainer/Guns" method="_on_Ok_Button_pressed"]
[connection signal="pressed" from="TabContainer/Other/RichTextLabel/Control/Button" to="TabContainer/Other" method="_on_Button_pressed"]
[connection signal="pressed" from="TabContainer/Other/RichTextLabel/Control/Button2" to="TabContainer/Other" method="_on_Button2_pressed"]
[connection signal="pressed" from="TabContainer/Other/Remainder/Button" to="TabContainer/Other" method="_on_Ok_Button_pressed"]
